src/assets/sass/styles.scss
// @font-face {
//     font-family: "Baloo 2";
//     font-style: normal;
//     font-weight: normal;
//     src: local("Baloo 2 Regular"), local("Baloo-2-Regular"),
//         url("../fonts/baloo-2-v1-latin-regular.woff2") format("woff2");
//     font-display: swap;
// }

// @font-face {
//     font-family: "Baloo 2";
//     font-style: normal;
//     font-weight: 500;
//     src: local("Baloo 2 Medium"), local("Baloo-2-Medium"),
//         url("../fonts/baloo-2-v1-latin-500.woff2") format("woff2");
//     font-display: swap;
// }

:root {
    --space-between-sections: 4rem;
}


html {
    // font-size: 1rem;
    background-color: #fff;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    // font-family: 'Inter', Arial, sans-serif;
    line-height: 1.5;
    font-size: 1rem;
    position: relative;
    overflow-x: hidden;
    padding: 0;
    margin: 0;
}



*,
*:before,
*:after {
    box-sizing: border-box;
}

img {
    display: block;
    width: 100%;
    height: auto;
}

p {
    margin: 0;
}

@import 'parts/colors';
@import 'parts/typography';
@import 'parts/utility';
@import 'parts/header';
@import 'parts/buttons';

//PAGE TITLE
.e-page-title {
    font-size: var(--page-title-font-size);
    font-weight: 900;
    line-height: calc(var(--page-title-font-size) * 1.3);
    color: var(--page-title);
    margin: 0 0 1.875rem 0;

    &.e-dark {
        color: #040404;
    }
}

.e-root-dir-title {
    font-size: 24px;
    font-weight: 700;
    color: var(--page-title);
    margin-bottom: 0;
}


//SECTION TITLE
.e-section-title {
    font-size: var(--section-title-font-size);
    font-weight: 700;
    line-height: calc(var(--section-title-font-size) * 1.3);
    color: var(--section-title);
    text-transform: uppercase;
    margin: 0 0 1.5rem 0;
}

//HOME PAGE TITLE
.e-home-section-title {
    font-size: 2.25rem;
    font-weight: 900;
    line-height: 2.5rem;
    margin: 0 0 1.875rem 0;
}

//FEATURE TITLE
.e-feature-title {
    font-size: var(--feature-title-font-size);
    font-weight: 700;
    line-height: calc(var(--feature-title-font-size) * 1.3);
    color: var(--paragraph-normal);
    position: relative;
    padding-left: 24px;

    &:before {
        content: '';
        position: absolute;
        left: 0;
        top: 6px;
        width: 16px;
        height: 16px;
        border-radius: 2px;
        background-color: var(--paragraph-normal);
    }
}

//CONTENT
.e-content-holder {

    main & {
        display: grid;
        grid-column-gap: 2rem;
        grid-row-gap: var(--space-between-sections);
    }

    +.e-content-holder {
        margin-top: var(--space-between-sections);
    }
}

.e-content__text-holder {

    p,
    ul li,
    .e-link,
    .e-p-title {
        font-size: var(--paragraph-text-main-font-size);
        font-weight: 400;
        line-height: var(--paragraph-text-main-line-height);
    }

    p,
    ul li,
    .e-p-title {
        color: var(--paragraph-normal);
    }

    .e-p-title {
        font-weight: 700;
    }

    &.e-intro {

        p,
        ul li,
        .e-link {
            font-size: 28px;
        }
    }


    ul {
        margin: 0;

        li+li {
            margin-top: 0.6rem;
        }
    }

    .e-other-projects-list {
        li+li {
            margin-top: 0;
        }
    }

    p+p,
    p+ul,
    ul+p,
    p+h4,
    p+h5,
    p+.e-btn {
        margin-top: 1.6rem;
        margin-bottom: 0;
    }

    .e-text-sub {
        font-size: 1rem;
        font-style: italic;
        line-height: 1.2;
        color: #78909C;
        margin-top: 0.5rem;
    }
}

.e-content__screenshots-grid {
    position: relative;
    display: grid;
    grid-gap: 1rem;
    align-self: start;
}

.e-content__screenshots-grid-caption {
    grid-column: 1 / -1;
    font-size: 0.875rem;
    font-style: italic;
    text-align: center;
    color: #546E7A;
}

/*
======
FOOTER
======
*/

.e-footer__main {
    font-size: 0.75rem;
    font-weight: 300;
    color: #607D8B;
    text-align: center;
    padding: 1rem 2rem;
}

.e-footer__social-links {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 1rem;

    a {
        display: inline-block;
        padding: 0.5rem;

        +a {
            margin-left: 0.5rem;
        }
    }

    svg {
        display: inline-block;
        vertical-align: middle;
        width: 1.5rem;
        height: 1.5rem;
        color: #78909C;
        fill: currentColor;
        transition-property: color;
        transition: 0.5sm ease-in-out;
        cursor: pointer;
    }
}

.e-footer__email-holder {
    font-size: 1rem;
    color: #263238;
    padding: 1rem 0;
}

.e-footer__email {
    color: inherit;
    font-weight: 700;
}

.e-projects-list {
    list-style: none;
    padding: 0;
    display: grid;
    grid-gap: 1rem;
}

.e-project-item {
    border: 1px solid #B0BEC5;
    border-radius: 8px;
    padding: 1rem;
    text-decoration: none;
    display: block;
}

.e-other-projects-list {
    display: grid;
    grid-gap: 1rem;
    list-style: none;
    padding-left: 0;
    padding-top: 1rem;
    margin-top: 1rem;

    li {
        display: flex;
    }
}

$other-project-img-size: 6rem;

.e-other-project__card {
    display: flex;
    align-self: stretch;
    width: 100%;
    border: 1px solid;
    border-color: rgba(#B0BEC5, 0.3);
    box-shadow: 0 3px 8px rgba(#263238, 0.08);
    border-radius: 0.5rem;
    text-decoration: none;
    height: auto;
    padding: 1rem;
    transition: 0.5s ease-in-out;


    img {
        width: $other-project-img-size;
        height: $other-project-img-size;
        object-fit: cover;
    }
}

.e-other-project__content-holder {
    flex: 1;
    width: 100%;
    padding-left: 1rem;
}

.e-other-project__title {
    font-size: 1rem;
    font-weight: 700;
    line-height: 1.3;
    color: #263238;
}

.e-other-project__descr {
    font-size: 0.875rem;
    font-weight: 400;
    line-height: 1.3;
    color: #455A64;
    margin-top: 0.5rem;
}

.e-other-project__tech {
    font-size: 0.75rem;
    font-weight: 300;
    font-style: italic;
    line-height: 1.2;
    color: #78909C;
    margin-top: 1rem;
}

.e-anchors-holder {
    display: flex;
    flex-wrap: wrap;
    margin-left: -0.5rem;
    margin-top: 0.5rem;

    a {
        padding: 0.1rem 0.35rem;
        color: #455A64;
        font-size: 0.875rem;
        font-style: italic;
        text-decoration: none;
        transition-property: color;
        transition: 0.5s ease-in-out;
        background-color: #ECEFF1;
        border-radius: 99px;
        margin: 0.5rem 0.5rem 0;

        &:hover {
            color: #0288D1;
        }
    }
}

.e-books-list {
    display: grid;
    grid-gap: 1rem;
    padding-top: 2rem;
    padding-bottom: 2rem;
}

.e-coming-soon-img {
    width: 100%;
    max-width: 350px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2rem;
}

/*
=========================
===== MEDIA QUERIES =====
=========================
*/

@media (min-width: 650px) {
    :root {
        --section-side-padding: 4rem
    }

    .e-content__screenshots-grid {
        &.e-col-3 {
            grid-template-columns: repeat(3, 1fr);
        }

        &.e-col-6 {
            grid-template-columns: repeat(3, 1fr);
        }
    }
}

@media (min-width: 769px) {
    .e-other-projects-list {
        grid-template-columns: repeat(2, 1fr);
    }

    .e-other-project__card {
        &:hover {
            border-color: rgba(#01579B, 0.3);
            box-shadow: 0 5px 12px rgba(#263238, 0.3);
        }
    }

    .e-icon__linkedin {
        &:hover {
            color: #0077b7;
        }
    }

    .e-icon__twitter {
        &:hover {
            color: #76a9ea;
        }
    }

    .e-icon__behance {
        &:hover {
            color: #0067ff;
        }
    }

    .e-icon__dribbble {
        &:hover {
            color: #a6285f;
        }
    }

    .e-books-list {
        grid-template-columns: repeat(2, 1fr);
    }
}


@media (min-width: 1000px) {
    :root {
        --section-side-padding: 1.5rem
    }

    .e-feature-title {

        &:before {
            top: 9px;
        }
    }

    .e-content-holder {

        main & {
            grid-template-columns: repeat(12, 1fr);
        }
    }

    //content with left photo
    .e-content__with-left-photo {

        .e-content__text-holder {
            grid-column: 9 / -1;
            grid-row: 1;
        }

        .e-content__photo-holder {
            grid-column: 1 / 9;
            grid-row: 1;
        }

        &.e-photo-small {
            .e-content__text-holder {
                grid-column: 7 / -1;
                grid-row: 1;
            }

            .e-content__photo-holder {
                grid-column: 2 / 7;
                grid-row: 1;
            }
        }
    }

    //content with right photo
    .e-content__with-right-photo {

        .e-content__text-holder {
            grid-column: 1 / 5;
            grid-row: 1;
        }

        .e-content__photo-holder {
            grid-column: 5 / -1;
            grid-row: 1;
        }

        &.e-photo-small {
            .e-content__text-holder {
                grid-column: 1 / 8;
                grid-row: 1;
            }

            .e-content__photo-holder {
                grid-column: 8 / -1;
                grid-row: 1;
            }
        }
    }

    //content centered
    .e-content__center {
        grid-row: 1;

        .e-content__text-holder,
        .e-content__photo-holder {
            grid-column: 3 / 11;
        }

        &.e-content__home-other-projects {

            .e-content__text-holder,
            .e-content__photo-holder {
                grid-column: 2 / 12;
            }
        }
    }

    //content left aligned
    .e-content__left {

        .e-content__text-holder {
            grid-column: 1 / 10;
            grid-row: 1;
        }
    }

    //About > Skills
    .e-about-skills-holder {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-gap: 2rem;
    }

    .e-content__screenshots-grid {

        &.e-col-6 {
            grid-template-columns: repeat(6, 1fr);
        }
    }

    .e-books-list {
        grid-template-columns: repeat(4, 1fr);
    }
}

@media (max-width: 1000px) {
    :root {
        --space-between-sections: 3rem;
    }

    .e-feature-title {

        &:before {
            top: 6px;
        }
    }

    .e-content-holder {

        main & {
            grid-template-columns: 1fr;
        }
    }



    //About > Skills
    .e-about-skills-holder {
        grid-template-columns: 1fr;

        >div+div {
            margin-top: 2rem;
        }
    }

    .e-section-separator-line {
        margin-bottom: 2rem;
    }

    .e-books-list {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 768px) {
    .e-content-holder {

        &.e-reverse-mobile {
            .e-content__text-holder {
                grid-row: 2;
            }
        }
    }
}

@media (max-width: 650px) {
    :root {
        --section-side-padding: 1.5rem
    }

    .e-books-list {
        grid-template-columns: 1fr;
    }

    .e-about-skills-holder {
        ul+ul {
            margin-top: 0.6rem;
        }
    }
}

